public class Bicycle extends Vehicle {
    public void start()
    {
        System.out.println("push the pedal");
    }

    public void stop()
    {
        System.out.println("stop pushing the pedal");
    }

    public void accelerate()
    {
        System.out.println("push the pedal faster");
    }
}
