public class Car extends Vehicle {
    public void start()
    {
        System.out.println("make the speed more than 0");
    }

    public void stop()
    {
        System.out.println("make the speed 0");
    }

    public void accelerate()
    {
        System.out.println("speed faster");
    }
}
