public class Motorcycle extends Vehicle {
    public void start()
    {
        System.out.println("trun the key and put a helmet");
    }

    public void stop()
    {
        System.out.println("make the speed 0, trun the key the other way");
    }

    public void accelerate()
    {
        System.out.println("speed faster");
    }
}
