@startuml
class Car {
+ void start()
+ void stop()
+ void accelerate()
}

class Motorcycle {
+ void start()
+ void stop()
+ void accelerate()
}

abstract class Vehicle {
+ {abstract}void start()
+ {abstract}void stop()
+ {abstract}void accelerate()
}

class Main {
+ {static} void main(String[])
}

class Bicycle {
+ void start()
+ void stop()
+ void accelerate()
}



Vehicle <|-- Car
Vehicle <|-- Motorcycle
Vehicle <|-- Bicycle
@enduml